Fixed nav bttns z index. Issue nav bttns not center aligned now

--- a/pw-react/src/css/App.css
+++ b/pw-react/src/css/App.css
@@ -105,6 +105,12 @@ button:hover{
   filter: blur(3px) brightness(85%);
 }
 
+
+.top-img-container{
+  position: relative;
+  float: left;
+}
+
 /* MIDDLE SECTION */
 #middle-section{
   height: 20vh;
@@ -117,7 +123,7 @@ button:hover{
   width: 100vw;
   height: auto;
   padding: 2vh;
-  position: relative;
+  position: absolute;
   z-index: 2;
 }
 
@@ -130,13 +136,14 @@ button:hover{
 }
 
 .middle-nav-section button{
+  position: relative;
+  z-index: 0;
   float: left;
   width: 25vw;
   height: 6vh;
   border: 0.25vh solid #BF2626;
   border-radius: 1vh;
-  margin-left: -0.4vw;
-  margin-right: -0.4vw;
+  margin-left: -1vw;
   background-color: #FDFFFF;
   font-size: 2.75vh;
   font-family: source-sans-pro-light;
